--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,20 @@
 {
     "name": "linden3/entitywire",
-    "require-dev": {
-        "phpunit/phpunit": "~4.4",
-        "mockery/mockery": "~0.9"
-    },
-    "license": "MIT",
     "authors": [
         {
             "name": "Andreas Lindeboom",
             "email": "andreas@linden3.nl"
         }
     ],
-    "require": {}
+    "license": "MIT",
+    "require": {},
+    "require-dev": {
+        "phpunit/phpunit": "~4.4",
+        "mockery/mockery": "~0.9"
+    },
+    "autoload": {
+        "psr-0": {
+            "": "src"
+        }
+    }
 }
